--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin: 60px;
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 10px;
