--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,8 +2,9 @@
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	flex-direction: column;
 	color: #fff;
 	background-color: rgb(239, 239, 239);
 }
